# uni

./: .clang-format  .gitignore  .pre-commit-config.yaml  Makefile
computer-networks/: .editorconfig
computer-networks/cm1/: main.c  main.typ  serve.sh
computer-networks/cw2/: .editorconfig  Makefile  cw2.ipynb  lecture_5_7.ipynb  lib.py  main.ipynb  main.typ  pyproject.toml  tests.py
computer-networks/cw3/: .editorconfig  .gitignore  devbox.json  main.typ
computer-networks/cw4/: .gitignore  flake.nix  main.typ
databases/cw1/: bibliography.yaml  main.typ
databases/cw2/: bibliography.yaml  compose.yaml  main.typ  script.sql
databases/cw3/: bibliography.yaml  fake_data.rb  main.typ  script.sql
databases/cw4/: .editorconfig  .gitignore  bibliography.yaml  compose.yaml  main.typ  script.sql  template.typ
databases/cw6/: .editorconfig  bibliography.yaml  init.sql  main.typ  script.sql
management-theory-fundamentals/task2/: bibliography.yaml  main.py  main.typ  pixi.toml
management-theory-fundamentals/task4/: bibliography.yaml  main.typ  template.typ
network-admin/cw2/: ImportUsers.ps1  Users.csv  main.typ
network-admin/cw3/: main.typ
networks-and-telecommunications/cw2/: .editorconfig  bibliography.yaml  main.typ  (+1 more)
oop-matrix-cli/: .clang-format  Makefile  README.md  main.cc  main.typ  template.typ  tool.cc  tool.hh  tool_test.cc
oop-matrix-mul-cli/: README.md  main.cc  main.typ  tool.cc  tool.hh  tool_test.cc
practice-6-sem/: README.md  bibliography.yaml  example.pb.go  example.proto  lazy-config.yaml  main.go  main.typ  pyproject.toml  swapi.xml
(+67 files in other folders)
